first two sections adaptation

--- a/package.json
+++ b/package.json
@@ -25,5 +25,14 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.52.3"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ]
+    
+
+  
 }
